# gandiva-rs

./: .gitignore  .gitmodules  Cargo.toml  README.md
gandiva-datafusion-plugin/: Cargo.toml
gandiva-datafusion-plugin/benches/: gandiva_expr.rs  gandiva_filter_exec.rs  gandiva_projection_exec.rs
gandiva-datafusion-plugin/scripts/criterion/: collect_comparison_lines.py  index.html
gandiva-datafusion-plugin/src/: lib.rs
gandiva-datafusion-plugin/src/physical_expr/: condition.rs  expr.rs  mod.rs
gandiva-datafusion-plugin/src/physical_optimizer/: mod.rs  try_apply_gandiva.rs
gandiva-datafusion-plugin/src/physical_plan/: gandiva_filter_exec.rs  gandiva_projection_exec.rs  mod.rs
gandiva-datafusion-plugin/src/tests/: mod.rs  utils.rs
gandiva-datafusion-plugin/tests/it/: main.rs
gandiva-datafusion-plugin/tests/it/physical_expr/: mod.rs
gandiva-datafusion-plugin/tests/it/physical_plan/: gandiva_filter_exec.rs  gandiva_projection_exec.rs  mod.rs
gandiva-rs-bindings/: Cargo.toml  build.rs
gandiva-rs-bindings/benches/: filter.rs  projector.rs
gandiva-rs-bindings/cpp/: CMakeLists.txt  base.h  common.cc  common.h  config_builder.cc  config_builder.h  config_holder.cc  config_holder.h  id_to_module_map.h
gandiva-rs-bindings/examples/: projector.rs
gandiva-rs-bindings/proto/gandiva/: types.proto
gandiva-rs-bindings/src/: lib.rs
gandiva-rs-bindings/src/error/: gandiva_error.rs  mod.rs
gandiva-rs-bindings/src/evaluator/: buffer.rs  filter.rs  projector.rs  selection_vector.rs  utils.rs
gandiva-rs-bindings/src/expression/: and_node.rs  arrow_type_helper.rs  binary_node.rs  boolean_node.rs  condition.rs  decimal_node.rs  double_node.rs  expression_tree.rs  field_node.rs  float_node.rs  function_node.rs  if_node.rs  in_node.rs  int64_node.rs  int_node.rs  mod.rs  null_node.rs  or_node.rs  primitive_nodes.rs  string_node.rs  tree_builder.rs  tree_node.rs
gandiva-rs-bindings/src/proto/: mod.rs
gandiva-rs-bindings/src/proto/gandiva/: types.rs
gandiva-rs-bindings/tests/it/evaluator/: filter.rs  mod.rs  projector.rs
src/cpp/: common.cc  common.h  config_builder.cc  config_builder.h  module_holder.h
src/gandiva-rs/: Cargo.toml  build.rs
src/gandiva-rs-bindings/: Cargo.toml  build.rs
src/gandiva-rs-bindings/benches/: filter.rs  projector.rs
src/gandiva-rs-bindings/cpp/: base.h  wrapper.h
src/gandiva-rs-bindings/examples/: projector.rs
src/gandiva-rs-bindings/src/: bindings.rs
src/gandiva-rs-bindings/src/evaluator/: filter.rs  mod.rs  selection_vector.rs  utils.rs
src/gandiva-rs-bindings/src/exception/: mod.rs
src/gandiva-rs-bindings/src/expression/: and_node.rs  condition.rs  decimal_node.rs  double_node.rs  expression_tree.rs  float_node.rs  in_node.rs  null_node.rs  or_node.rs  string_node.rs
src/gandiva-rs-bindings/tests/it/evaluator/: projector.rs
src/gandiva-rs/examples/: projector.rs
src/gandiva-rs/src/: lib.rs
src/gandiva-rs/src/evaluator/: buffer.rs  projector.rs
src/gandiva-rs/src/exception/: gandiva_exception.rs
src/gandiva-rs/src/expression/: arrow_type_helper.rs  binary_node.rs  boolean_node.rs  field_node.rs  function_node.rs  if_node.rs  int_node.rs  long_node.rs  mod.rs  tree_builder.rs  tree_node.rs
src/gandiva-rs/src/proto/: utils.rs
src/gandiva-rs/src/proto/gandiva/: mod.rs  types.rs
src/gandiva-rs/tests/it/: main.rs
src/gandiva-rs/tests/it/evaluator/: filter.rs  projector.rs
src/proto/gandiva/: types.proto
