[workspace.package]
authors = ["JasonLi-cn <lijingxuan92@126.com>"]
edition = "2021"
description = "Rust bindings for Gandiva."
keywords = ["arrow", "gandiva", "codegen"]
homepage = "https://github.com/JasonLi-cn/gandiva-rs"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/JasonLi-cn/gandiva-rs"
version = "0.1.0"

[workspace]
resolver = "2"
members = [
    "src/gandiva-rs-bindings"
]

exclude = [
]

[workspace.dependencies]
