[package]
name = "gandiva-rs"
authors = { workspace = true }
edition = { workspace = true }
description = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = { version = "=0.8.6" }
arrow = { version = "50.0.0", features = ["prettyprint"] }
prost = { version = "0.12" }
strum = { version = "0.25.0", features = ["derive"] }
strum_macros = { version = "0.25.0" }
tonic = { version = "0.10" }

[dev-dependencies]
criterion = { version = "0.5" }
rand = { version = "0.8" }

[build-dependencies]
bindgen = { version = "0.69", default-features = false, features = ["runtime", "which-rustfmt"] }
cc = { version = "1.0.45" }
cmake = { version = "0.1" }
once_cell = { version = "1.19.0" }
pkg-config = { version = "0.3.30" }
prost-build = { version = "0.12" }

[[bench]]
harness = false
name = "projector"

[[bench]]
harness = false
name = "filter"